--- a/main.html
+++ b/main.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<meta charset=utf-8 />
-		<title>Return first and last name from a form</title>
-		<style type="text/css">
-			body {margin: 30px;}
-		</style> 
-	<link rel="stylesheet" href="styles.css">
+  <title>Form Login</title>
 </head>
-
 <body>
-	<form id="form1" onsubmit="getFormvalue()">
-		First name: <input type="text" name="fname"><br>
-		Last name: <input type="text" name="lname"><br>
-		<input type="submit" value="Submit">
-	</form>
-	
-    <script type="text/javascript" src="./script.js">
-</script>
+  <form id="nameForm">
+    <label for="fname">First Name:</label>
+    <input type="text" name="fname" id="fname" /><br /><br />
+    
+    <label for="lname">Last Name:</label>
+    <input type="text" name="lname" id="lname" /><br /><br />
+    
+    <input type="submit" value="Submit" />
+  </form>
 
+  <script>
+    function getFormvalue(event) {
+      // Prevent the default form submission
+      event.preventDefault();
+
+      // Get form values and trim extra spaces
+      const firstName = document.forms["nameForm"]["fname"].value.trim();
+      const lastName = document.forms["nameForm"]["lname"].value.trim();
+
+      // Display full name using alert
+      alert(`${firstName} ${lastName}`);
+    }
+
+    // Attach the function to the form's submit event
+    document.getElementById("nameForm").addEventListener("submit", getFormvalue);
+  </script>
 </body>
-
 </html>
